--- a/CAweb/css/styles.css
+++ b/CAweb/css/styles.css
@@ -91,3 +91,12 @@ footer {
     border-radius: 3px;
     float: right
 }
+
+
+.alert-fixed {
+  position:fixed; 
+  top: 10px; 
+  right: 10px; 
+  width: 25%;
+  z-index:9999;
+}
