--- a/CAwebapp/Views/Home/Profile.cshtml
+++ b/CAwebapp/Views/Home/Profile.cshtml
@@ -21,9 +21,16 @@
     <div class="panel-body">
         <!-- todo add results frrom crl request here -->
         <ul class="list-group">
-            <li class="list-group-item list-group-item-success">Certificate A <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
+             @foreach(var cert in ViewBag.ActiveCerts)
+            {            
+                <li class="list-group-item list-group-item-success">   
+                @cert.CertId
+                <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
+            }
+            <!--<li class="list-group-item list-group-item-success">Certificate A <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
             <li class="list-group-item list-group-item-success">Certificate B <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
             <li class="list-group-item list-group-item-success">Certificate C <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
+            -->
         </ul>
     </div>
 </div>
@@ -35,38 +42,55 @@
     <div class="panel-body">
         <!-- todo add results frrom crl request here -->
         <ul class="list-group">
-            <li class="list-group-item list-group-item-danger">Certificate D</li>
-            <li class="list-group-item list-group-item-danger">Certificate E</li>
+            @foreach(var cert in ViewBag.RevokedCerts)
+            {   
+                <li class="list-group-item list-group-item-danger">@cert.CertId</li>
+            }
         </ul>
     </div>
 </div>
 
-<div class="card-header">
-    Update User Information
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">Update User Information</h4>
+    </div>
+    <div class="panel-body">
+        @using (Html.BeginForm("Profile", "Home", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                @Html.LabelFor(m => m.FirstName)
+                @Html.TextBoxFor(m => m.FirstName, "", new { @class = "form-control", @placeholder = "First name" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.LastName)
+                @Html.TextBoxFor(m => m.LastName, "", new { @class = "form-control", @placeholder = "Last name" })
+            </div>
+            <div class="form-group">
+                <input type="submit" name="submit" class="btn btn-primary" value="Update User"/>
+            </div>
+        }
+    </div>
 </div>
-<div class="card-body">
-    @using (Html.BeginForm("Profile", "Home", FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
-        <div class="form-group">
-            @Html.LabelFor(m => m.FirstName)
-            @Html.TextBoxFor(m => m.FirstName, "", new { @class = "form-control", @placeholder = "First name" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.LastName)
-            @Html.TextBoxFor(m => m.LastName, "", new { @class = "form-control", @placeholder = "Last name" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password)
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.NewPassword)
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "NewPassword" })
-        </div>
-        <div class="form-group">
-            <input type="submit" name="submit" class="btn btn-primary" value="UpdateUser"/>
-        </div>
-    }
-</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4 class="panel-title">Update User Password</h4>
+    </div>
+    <div class="panel-body">
+        @using (Html.BeginForm("Profile", "Home", FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password)
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Current Password" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.NewPassword)
+                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "New Password" })
+            </div>
+            <div class="form-group">
+                <input type="submit" name="submit" class="btn btn-primary" value="Update Password"/>
+            </div>
+        }
+    </div>
 </div>
