--- a/CAwebapp/Views/Home/Profile.cshtml
+++ b/CAwebapp/Views/Home/Profile.cshtml
@@ -25,8 +25,13 @@
             {            
                 <li class="list-group-item list-group-item-success">   
                 @cert.CertId
-                <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
+                @using (Html.BeginForm("RevokeCert", "Home", new { cid = cert.CertId }, FormMethod.Post))
+                {
+                    <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button>
+                }
+                </li>
             }
+
             <!--<li class="list-group-item list-group-item-success">Certificate A <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
             <li class="list-group-item list-group-item-success">Certificate B <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
             <li class="list-group-item list-group-item-success">Certificate C <button type="submit" class="btn btn-danger btn-sm-custom ">Revoke</button></li>
