--- a/CAwebapp/Views/Shared/_Layout.cshtml
+++ b/CAwebapp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,13 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" id="log-out-button"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            @using (Html.BeginForm("Logout", "Home", FormMethod.Post))
+                            {
+                                <button type="submit" class="btn btn-primary btn-sm-custom ">Logout</button>
+                            }
+                        } 
                     </ul>
                     <!--<ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
