--- a/CAwebapp/Views/Admin/Profile.cshtml
+++ b/CAwebapp/Views/Admin/Profile.cshtml
@@ -1,13 +1,11 @@
-
-
 @{
     ViewBag.Title = "Profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row text-center">
+<div class="row">
     <div class="bg-white rounded shadow-sm py-5 px-4">
-        <img src="~/content/user.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+        <h4>CA Admin</h4>
         <label>Number of issued certificates: </label>
         <div class="text-muted"> @ViewBag.Status.NumberOfIssuedCertificates</div>
         <label>Number of revoked certificates: </label>
